fixed layout issues

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -160,4 +160,6 @@ background-size: cover;
 
 }
 
-
+.createAccount {
+	padding: 20px;
+}
